<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context=".Homepage" >

    <TextView
        android:id="@+id/key"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cipherText"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:text="@string/Key"
        android:background="#666666"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cipherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/key"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/key"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:text="@string/Ciphertext"
        android:background="#666666"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/Percentage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/decrypt"
        android:layout_marginBottom="29dp"
        android:background="#666666"
        android:textColor="#ffffff"
        android:text="@string/PercentageOfMatch" />

    <TextView
        android:id="@+id/decryptText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/key"
        android:layout_below="@+id/key"
        android:layout_marginTop="62dp"
        android:scrollbars="vertical"
        android:background="#666666"
        android:textColor="#ffffff"
        android:text="@string/Decrypted_Text" />

    <Button
        android:id="@+id/decrypt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Percentage"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="37dp"
        android:text="@string/Decrypt" />

    <Button
        android:id="@+id/cipherGet"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/decrypt"
        android:layout_alignBottom="@+id/decrypt"
        android:layout_marginLeft="33dp"
        android:layout_toRightOf="@+id/decrypt"
        android:text="@string/Get_Cipher" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

</RelativeLayout>